<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/deawer_Main" />
        <item
            android:id="@+id/nav_DeviceProfile"
            android:icon="@drawable/ic_dvr_black_24dp"
            android:title="@string/deawer_Device" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_my_location_black_24dp"
            android:title="@string/deawer_location" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/deawer_Setting" />
    </group>
</menu>
