<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DeviceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txt_Serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_serialnumber"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_SerialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_Add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_address"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_Lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_latitude"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_Latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_Lon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_longitude"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_Longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_TS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_threshold"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_Threshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_Cr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_create_at"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_Create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_UP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_updated_at"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_Updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>
